# uploader

./: .env.example  .gitignore  .template.yaml  AGENTS.md  Dockerfile  README.md  cli.py  hatch_build.py  history.jsonl  main.py  makefile  openapigen.yaml  pyproject.toml  run.py  setup.py
.github/workflows/: binary.yaml  build-wheel.yaml  build.yaml  ci.yaml  ci.yml  e2e.yaml  frontend-tests.yaml  release-wheel.yaml  release.yaml  tests.yaml
app/: __init__.py  discover.py  display.py  interface.py  log.py  plugins.py  report_events.py  storage.py  tap.py  upload.py
app/crossmatch/: __init__.py  engine.py  layered.py  models.py  resolver.py
app/crossmatch/layered/: __init__.py  icrs.py  name.py  object_type.py  pgc.py  redshift.py  resolver.py
app/crossmatch/resolvers/: icrs.py
app/designations/: __init__.py  rules.py  upload.py
app/icrs/: __init__.py  upload.py
app/lib/: rawdata.py
app/name_checker/: __init__.py  checker.py  rules.py
app/nature/: __init__.py  upload.py
app/redshift/: __init__.py  upload.py
app/sources/: __init__.py  csv.py  fits.py  vizier.py  vizier_v2.py
app/structured/designations/: __init__.py  upload.py
app/structured/icrs/: __init__.py  upload.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
plugins/: csv.py  csv_batched.py  fits.py  vizier.py  vizier_v2.py
scripts/: install.sh
server/: cli.py  credentials.py  history.py  main.py  paths.py  schema.py  task_registry.py  tasks.py
server/forms/: authenticate.py  crossmatch_default.py  crossmatch_layered.py  crossmatch_two_radii.py  structured_designation.py  structured_icrs.py  structured_nature.py  structured_photometry_hyperleda.py  structured_redshift.py  upload.py  upload_base.py  upload_csv.py  upload_fits.py  upload_vizier.py  upload_vizier_v2.py
tests/: test_clients_client.py  test_crossmatch_resolver.py  test_csv.csv  test_designation_rules.py  test_expression.py  test_name_checker_rules.py  test_schema.py  test_server_integration.py  test_upload.py
uploader/: cli.py  credentials.py  history.py  schema_rjsf.py  task_registry.py  tasks.py
uploader/app/: __init__.py  action_description.py  endpoints.py  interface.py  report.py  storage.py  tap.py  upload.py
uploader/clients/: client.py
uploader/forms/: authenticate.py  common.py  crossmatch_default.py  crossmatch_layered.py  crossmatch_resolve_conflicts.py  crossmatch_two_radii.py  structured_designation.py  structured_geometry_isophotal.py  structured_icrs.py  structured_nature.py  structured_note.py  structured_photometry_hyperleda.py  structured_redshift.py  submit_crossmatch.py  upload_base.py  upload_csv.py  upload_fits.py  upload_vizier.py  upload_vizier_v2.py
(+45 files in other folders)
