[project]
name = "uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog>=25.3.0",
    "astroquery>=0.4.10",
    "astropy>=7.1.0",
    "openapi-python-client>=0.27.1",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
# this is needed until the PR is merged: https://github.com/astropy/astroquery/pull/3458
astroquery = { git = "https://github.com/Kraysent/astroquery.git", branch = "release-with-fix" }

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 120
