[project]
name = "uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog>=25.3.0",
    "astroquery>=0.4.10",
    "astropy>=7.1.0",
    "openapi-python-client>=0.27.1",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "pyvo>=1.8",
    "psycopg[binary]>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
astroquery = { git = "https://github.com/astropy/astroquery.git", branch = "main" }

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 120
