[project]
name = "uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog>=25.3.0",
    "astroquery>=0.4.10",
    "astropy>=7.1.0",
    "openapi-python-client>=0.27.1",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "pyvo>=1.8",
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff~=0.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 120
src = ["."]

[tool.ruff.lint]
ignore = [
    "N818", # ignore SomeException -> SomeError rule
    "B024", # abstract class without abstract methods
    "B017", # ignore assertRaises(Exception)
    "B027", # empty method without abstract decorator
]
# see https://docs.astral.sh/ruff/rules/ for description of each rule set.
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "A",
    "C4",
    "DTZ",
    "PIE",
    "RET",
    "SLF",
    "PTH",
    "PLE",
    "FLY",
    "NPY201",
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # ignore star imports warning in __init__ files
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
astroquery = { git = "https://github.com/astropy/astroquery.git", branch = "main" }
